syntax = "proto3";
package order;
option go_package = "github.com/zenpk/dorm-system/internal/service/order";

import "common.proto";
import "team.proto";

service Order{
  rpc Submit (SubmitRequest) returns (SubmitReply){}
  rpc Get (GetRequest) returns (GetReply){}
  rpc Delete (DeleteRequest) returns (DeleteReply){}
}

message OrderInfo{
  uint64 id = 1;
  string buildingNum = 2;
  string dormNum = 3;
  string info = 4;
  bool success = 5;
  bool deleted = 6;
}

message SubmitRequest{
  string buildingNum = 1;
  team.TeamInfo team = 2;
  string code = 3;
}

message SubmitReply{
  common.CommonResponse err = 1;
}

message GetRequest{
  uint64 teamId = 1;
}

message GetReply{
  common.CommonResponse err = 1;
  repeated OrderInfo orders = 2;
}

message DeleteRequest{
  uint64 orderId = 1;
  team.TeamInfo team = 2;
}

message DeleteReply{
  common.CommonResponse err = 1;
}
