syntax = "proto3";
package user;
option go_package = "github.com/zenpk/dorm-system/internal/service/user";

import "common.proto";

service User{
  rpc Register (RegisterLoginRequest) returns(UserReply){}
  rpc Login (RegisterLoginRequest) returns(UserReply){}
}

message RegisterLoginRequest{
  string username = 1;
  string password = 2;
}

message UserReply{
  common.CommonResponse err = 1;
  uint64 userId = 2;
}
